Final commit to footer

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           <li><a href="#">Terms &amp; Conditions</a></li>
         </ul>
       </div>
-      <div>
-        <div class="social link-header text-primary">Follow Us</div>
+      <div class="social">
+        <div class="link-header text-primary">Follow Us</div>
         <ul>
           <li><a href="#" class="twitter"></a></li>
           <li><a href="#" class="facebook"></a></li>
